<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog_bottom"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_4sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_8sdp"
        app:cardBackgroundColor="@color/dialog_top_view"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardElevation="0dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/bold"
            android:text="@string/filter_dialog_title"
            android:textColor="@color/text_black"
            android:textSize="@dimen/_13ssp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:background="@color/dial_item_divider" />

        <RadioGroup
            android:id="@+id/rgCallType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rbAllCalls"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_32sdp"
                android:background="@android:color/transparent"
                android:button="@android:color/transparent"
                android:checked="true"
                android:drawableStart="@drawable/filter_icon_selector"
                android:drawablePadding="@dimen/_10sdp"
                android:fontFamily="@font/medium"
                android:paddingHorizontal="@dimen/_15sdp"
                android:text="@string/filter_all_calls"
                android:textColor="@color/text_black"
                android:textSize="@dimen/_11ssp" />

            <RadioButton
                android:id="@+id/rbMissesCalls"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_32sdp"
                android:background="@android:color/transparent"
                android:button="@android:color/transparent"
                android:drawableStart="@drawable/filter_icon_selector"
                android:drawablePadding="@dimen/_10sdp"
                android:fontFamily="@font/medium"
                android:paddingHorizontal="@dimen/_15sdp"
                android:text="@string/filter_missed_calls"
                android:textColor="@color/text_black"
                android:textSize="@dimen/_11ssp" />

            <RadioButton
                android:id="@+id/rbIncomingCalls"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_32sdp"
                android:background="@android:color/transparent"
                android:button="@android:color/transparent"
                android:drawableStart="@drawable/filter_icon_selector"
                android:drawablePadding="@dimen/_10sdp"
                android:fontFamily="@font/medium"
                android:paddingHorizontal="@dimen/_15sdp"
                android:text="@string/filter_incoming_calls"
                android:textColor="@color/text_black"
                android:textSize="@dimen/_11ssp" />

            <RadioButton
                android:id="@+id/rbOutgoingCalls"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_32sdp"
                android:background="@android:color/transparent"
                android:button="@android:color/transparent"
                android:drawableStart="@drawable/filter_icon_selector"
                android:drawablePadding="@dimen/_10sdp"
                android:fontFamily="@font/medium"
                android:paddingHorizontal="@dimen/_15sdp"
                android:text="@string/filter_outgoing_calls"
                android:textColor="@color/text_black"
                android:textSize="@dimen/_11ssp" />

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_margin="@dimen/_15sdp">

            <TextView
                android:id="@+id/tvReset"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/app_btn_round_border"
                android:fontFamily="@font/semibold"
                android:gravity="center"
                android:text="@string/filter_reset"
                android:textColor="@color/app_color"
                android:textSize="@dimen/_11ssp" />

            <View
                android:layout_width="@dimen/_10sdp"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/tvApply"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/app_btn_round"
                android:fontFamily="@font/semibold"
                android:gravity="center"
                android:text="@string/filter_apply"
                android:textColor="@color/white"
                android:textSize="@dimen/_11ssp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>