<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/llImage"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_170sdp"
        android:background="@color/permission_bg_top"
        android:gravity="center|bottom"
        android:orientation="vertical"
        android:paddingBottom="@dimen/_15sdp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/_65sdp"
            android:layout_height="@dimen/_65sdp"
            android:gravity="center"
            android:src="@drawable/app_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:fontFamily="@font/semibold"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/permission_welcome"
            android:textColor="@color/app_color"
            android:textSize="@dimen/_15ssp" />

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:alpha="0.8"
                android:fontFamily="@font/medium"
                android:gravity="center"
                android:text="@string/allow_permission_desription"
                android:textColor="@color/text_black"
                android:textSize="@dimen/_12sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/_42sdp"
                        android:layout_height="@dimen/_42sdp"
                        android:padding="@dimen/_2sdp"
                        android:src="@drawable/permission_icon_1" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/_12sdp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:alpha="0.8"
                            android:fontFamily="@font/semibold"
                            android:singleLine="true"
                            android:text="@string/allow_contact"
                            android:textColor="@color/text_black"
                            android:textSize="@dimen/_12ssp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_3sdp"
                            android:fontFamily="@font/regular"
                            android:text="@string/title_contact_description"
                            android:textColor="@color/permission_text_gray"
                            android:textSize="@dimen/_9ssp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/_10sdp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/_42sdp"
                        android:layout_height="@dimen/_42sdp"
                        android:padding="@dimen/_2sdp"
                        android:src="@drawable/permission_icon_2" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/_12sdp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:alpha="0.8"
                            android:fontFamily="@font/semibold"
                            android:singleLine="true"
                            android:text="@string/title_phone"
                            android:textColor="@color/text_black"
                            android:textSize="@dimen/_12ssp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_3sdp"
                            android:fontFamily="@font/regular"
                            android:text="@string/title_phone_description"
                            android:textColor="@color/permission_text_gray"
                            android:textSize="@dimen/_9ssp" />

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/_42sdp"
                        android:layout_height="@dimen/_42sdp"
                        android:padding="@dimen/_2sdp"
                        android:src="@drawable/permission_icon_3" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/_12sdp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:alpha="0.8"
                            android:fontFamily="@font/semibold"
                            android:singleLine="true"
                            android:text="@string/title_call_log"
                            android:textColor="@color/text_black"
                            android:textSize="@dimen/_12ssp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_3sdp"
                            android:fontFamily="@font/regular"
                            android:text="@string/title_call_log_description"
                            android:textColor="@color/permission_text_gray"
                            android:textSize="@dimen/_9ssp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/_10sdp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/_42sdp"
                        android:layout_height="@dimen/_42sdp"
                        android:padding="@dimen/_2sdp"
                        android:src="@drawable/permission_icon_4" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/_12sdp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:alpha="0.8"
                            android:fontFamily="@font/semibold"
                            android:singleLine="true"
                            android:text="@string/title_overlay_permissiom"
                            android:textColor="@color/text_black"
                            android:textSize="@dimen/_12ssp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_3sdp"
                            android:fontFamily="@font/regular"
                            android:text="@string/title_overlay_description"
                            android:textColor="@color/permission_text_gray"
                            android:textSize="@dimen/_9ssp" />

                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/btnAllowPermission"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_18sdp"
            android:background="@drawable/app_btn_round"
            android:enabled="true"
            android:fontFamily="@font/medium"
            android:gravity="center"
            android:text="@string/allow_permission"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp" />

    </LinearLayout>

    <include layout="@layout/space_native_banner_holder" />

</LinearLayout>
